--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   <div class="wch_wpt">
                     <!-- 1st row -->
                     <div class="row">
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-12 col-4">
                         <div class="wc_icon">
                           <img src="images/icon/fast.png" alt="" class="w-100">
                         </div>
@@ -219,7 +219,7 @@
                   <div class="wch_wpt">
                     <!-- 1st row -->
                     <div class="row">
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-12 col-4">
                         <div class="wc_icon">
                           <img src="images/icon/watch.png" alt="" class="w-100">
                         </div>
@@ -246,12 +246,12 @@
                   <div class="wch_wpt">
                     <!-- 1st row -->
                     <div class="row">
-                      <div class="col-lg-4">
+                      <div class="col-lg-4 col-md-12 col-4">
                         <div class="wc_icon">
                           <img src="images/icon/watcht.png" alt="" class="w-100">
                         </div>
                       </div>
-                      <div class="col-lg-8">
+                      <div class="col-lg-8 col-12">
                         <div class="wc_hd">
                           <h2>Worldwide Shipping</h2>
                         </div>
