--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
               <div class="row">
 
                 <div class="col-md-4 g-md-0 left_dvdr">
-                  <div class="wch_wpt">
+                  <div class="wch_wpt btm_dvdr">
                     <!-- 1st row -->
                     <div class="row">
-                      <div class="col-lg-4 col-md-12 col-4">
+                      <div class="col-lg-4 col-md-12 col-12 sm_st">
                         <div class="wc_icon">
                           <img src="images/icon/fast.png" alt="" class="w-100">
                         </div>
@@ -216,10 +216,10 @@
                 </div>
 
                 <div class="col-md-4 g-md-0 left_dvdr">
-                  <div class="wch_wpt">
+                  <div class="wch_wpt btm_dvdr">
                     <!-- 1st row -->
                     <div class="row">
-                      <div class="col-lg-4 col-md-12 col-4">
+                      <div class="col-lg-4 col-md-12 col-12 sm_st">
                         <div class="wc_icon">
                           <img src="images/icon/watch.png" alt="" class="w-100">
                         </div>
@@ -246,7 +246,7 @@
                   <div class="wch_wpt">
                     <!-- 1st row -->
                     <div class="row">
-                      <div class="col-lg-4 col-md-12 col-4">
+                      <div class="col-lg-4 col-md-12 col-12 sm_st">
                         <div class="wc_icon">
                           <img src="images/icon/watcht.png" alt="" class="w-100">
                         </div>
@@ -421,7 +421,7 @@
           </div>
 
           <!-- 2nd col -->
-          <div class="col-md-6 d-flex justify-content-end">
+          <div class="col-md-6 d-flex justify-content-end tp_rgt_clmn">
             <div class="tpb_img_cntnt">
               <div class="tob_img1">
                 <img src="images/tpb2.png" alt="" class="w-100">
