small screen full responsive

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         <div class="container">
           <!-- first row -->
           <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-2">
+            <div class="col-lg-2 col-md-3 col-5">
               <div class="ftr_top">
                 <img src="images/logo.png" alt="" class="w-100">
               </div>
